=== HEAD

* Add support for an :after_connect option when connection, called with each new connection made (jeremyevans)

* Add support for a :test option when connecting to be automatically test the connection (jeremyevans)

* Add Dataset#select_append, which always appends to the existing SELECTed columns (jeremyevans)

* Emulate DISTINCT ON on MySQL using GROUP BY (jeremyevans)

* Make MSSQL shared adapter emulate set_column_null alter table op better with types containing sizes (jeremyevans) (#291)

* Add :config_default_group and :config_local_infile options to the native MySQL adapter (jeremyevans)

* Add log_warn_duration attribute to Database, queries that take longer than it will be logged at warn level (jeremyevans)

* Switch Database logging to use log_yield instead of log_info, queries that raise errors are now logged at error level (jeremyevans)

* Update active_model plugin to work with the ActiveModel::Lint 3.0.0beta2 specs (jeremyevans)

* Support JNDI connection strings in the JDBC adapter (jrun)

=== 3.10.0 (2010-04-02)

* Make one_to_one setter and *_to_many remove_all methods apply the association options (jeremyevans)

* Make nested_attributes plugin handle invalid many_to_one associations better (john_firebaugh)

* Remove private methods from Sequel::BasicObject on ruby 1.8 (i.e. most Kernel methods) (jeremyevans)

* Add Sequel::BasicObject.remove_methods!, useful on 1.8 if libraries required after Sequel add methods to Object (jeremyevans)

* Change Sequel.connect with a block to return the block's value (jonas11235)

* Add an rcte_tree plugin, which uses recursive common table expressions for loading trees stored as adjacency lists (jeremyevans)

* Make typecast_on_load plugin also typecast when refreshing the object (either explicitly or implicitly after creation) (jeremyevans)

* Fix schema parsing and dumping of tinyint columns when connecting to MySQL via the do adapter (ricardochimal)
