@@ -1,5 +1,7 @@
 === HEAD
 
+* Fix syntax errors when connecting to MSSQL via the dbi adapter (jeremyevans) (#292)
+
 * Add support for an :after_connect option when connection, called with each new connection made (jeremyevans)
 
 * Add support for a :test option when connecting to be automatically test the connection (jeremyevans)
